codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_collab_spawn_completed_renders_requested_model_and_effort.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: combined
---
▸ Agents: 1 · 1 running · 0s · /agent details
  └ … 019cff70-2599-75e2-af72-b91781b41a8e (gpt-5 high): Explore the repo
