codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: combined
---
▸ Agents: 2 · 1 running · 1 done · 1 interaction · 0s · /agent details
  └ ✓ Robie [explorer]: Done
