codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apps_popup_loading_state.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: before
---
────────────────────────────────────────────────────────────────────────────────

  Apps
  Loading installed and available apps...

›    Loading apps...  This updates when the full list is ready.

  Press enter to confirm or esc to go back
